<resources>
    <string name="app_name">一聪助手</string>
    <string name="show_window">展示悬浮窗</string>
    <string name="get_assist_permission">打开辅助服务</string>
    <string name="get_lucky_money">自动抢红包</string>
    <string name="people_nearby">自动添加附近的人</string>
    <string name="auto_prize">朋友圈自动点赞</string>
    <string name="add_friend_group">添加群好友</string>
    <string name="auto_sns">自动发朋友圈</string>
    <string name="auto_repay">自动回复</string>
    <string name="auto_crawler">自动抓取群信息</string>

    <string name="dialog_enable_accessibility_msg">Enable my Accessibility Service in order to get current activity info on Android 5.0+</string>
    <string name="dialog_enable_accessibility_positive_btn">Enable It</string>
    <string name="dialog_enable_overlay_window_msg">Allow permission to show window over other apps on Android 7.1.1+ </string>
    <string name="dialog_enable_overlay_window_positive_btn">settings</string>
</resources>
